@@ -11,6 +11,7 @@ from mnemosyne.libmnemosyne.utils import expand_path, traceback_string
 from mnemosyne.libmnemosyne.component_manager import new_component_manager, \
     register_component_manager, unregister_component_manager
 
+
 class Mnemosyne(Component):
 
     """This class groups the functionality needed to initialise and finalise
